...
      backgroundColor: _bg,
      appBar: AppBar(
        backgroundColor: Colors.white,
        elevation: 0,
        foregroundColor: _navy,
        centerTitle: true,
        title: const Text('NEEDS YOUR ATTENTION',
            style: TextStyle(
                fontWeight: FontWeight.bold,
                fontSize: 15,
                color: _navy,
                letterSpacing: 0.3)),
        actions: [
...
